made the form fields focussable by adjusting z-index, also fixed the submit button hover styles

--- a/src/sass/generic/_normalize.scss
+++ b/src/sass/generic/_normalize.scss
@@ -37,6 +37,17 @@ main {
 			box-sizing: content-box;
 			margin-left: auto;
 			margin-right: auto;
+			form{
+				p span{
+					z-index: 9999;
+				}
+				input[type=submit]{
+					transition: border 0.4s ease-in;
+					&:hover{
+						border: 1px solid #000;
+					}
+				}
+			}
 			h1{
 				text-align: center;
 				text-transform: uppercase;
